# merlin

./: .readthedocs.yaml  Kconfig  README.md  REUSE.toml  meson.build  meson.options
.github/workflows/: build.yml
LICENSES/: BSD-3-Clause.txt
configs/: defconfig  sample.config
doc/: meson.build
doc/concepts/: conf.py  index.rst  requirements.txt
doc/concepts/_static/figures/: schema_block.mmd  schema_sequence.mmd
doc/concepts/build_system/: dts.rst  index.rst  targets.rst
doc/concepts/concepts/: can.rst  dts.rst  index.rst  principles.rst  usage.rst
doc/concepts/tests/: index.rst
doc/concepts/write_drivers/: i2c.rst  index.rst  spi.rst  usart.rst  usb.rst
dts/: sample-i2c.dts  sample.dts
examples/: meson.build
examples/c/: meson.build
examples/c/i2c/i2c_bus_driver/: i2c_bus_driver.c  meson.build
examples/c/i2c/i2c_device_driver/: meson.build
examples/c/spi/: meson.build  spi_bus_driver.c
examples/c/usart/: stm32_usart_driver.c  stm32_usart_driver.h
examples/c/usb/: usbotgfs_driver.h
examples/can/: meson.build  stm32u5_fdcan_driver.c  stm32u5_fdcan_driver.h
examples/i2c/: meson.build
examples/i2c/i2c_bus_driver/: i2c_bus_driver.c  i2c_bus_driver.h
examples/i2c/i2c_device_driver/: ili2130_driver.c  ili2130_driver.h
examples/i2c_bus_driver/: i2c_bus_driver.c  i2c_bus_driver.h  meson.build
examples/rust/: README.md  meson.build  stm32f4_usart_driver.rs
examples/spi/: spi_bus_driver.c
examples/spi_bus_driver/: spi_bus_driver.c
examples/usart/: meson.build  stm32_usart_driver.c  stm32_usart_driver.h
examples/usb/: meson.build  usbotgfs_driver.c  usbotgfs_driver.h
include/: meson.build
include/merlin/: helpers.h  io.h
include/merlin/arch/asm-cortex-m/: io.h
include/merlin/arch/asm-generic/: io.h
include/merlin/arch/asm-rv32/: io.h
include/merlin/buses/: can.h  i2c.h  spi.h  usart.h  usb.h
include/merlin/platform/: driver.h
include/merlin/platform/api/: can.h  generic.h  i2c.h  spi.h  usart.h  usb.h
rust/: Cargo.toml  README.md  build.rs
rust/src/: dts.rs  io.rs  lib.rs  platform.rs  types.rs
rust/templates/: dts_generated.rs.in
src/: helper.h  meson.build
src/buses/: meson.build
src/buses/can/: can.c  can.h  can_dt.h.in  meson.build
src/buses/gpios/: gpios_dt.h.in  meson.build
src/buses/i2c/: i2c.c  i2c.h  i2c_dt.h.in  meson.build
src/buses/spi/: meson.build  spi.c  spi.h  spi_dt.h.in
src/buses/usart/: meson.build  usart.c  usart.h  usart_dt.h.in
src/buses/usb/: meson.build  usb.c  usb.h  usb_dt.h.in
src/platform/: devices-dt.c.in  dts.h  meson.build  platform_driver.c
