# SPDX-FileCopyrightText: 2023 - 2025 H2Lab OSS Team
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

option('with_doc', type: 'boolean', value: false, description: 'trigger sphinx documentation build')
option('with_tests', type: 'boolean', value: false, description: 'with unit tests')
option('with_examples', type: 'boolean', value: false, description: 'with examples applications')
option('config', type: 'string', description: 'Configuration file to use', yield: true)
option('dts', type: 'string', description: 'Device tree file to use', yield: true)
