# SPDX-FileCopyrightText: 2023 - 2025 H2Lab OSS Team
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

merlin_inc = include_directories('.')

merlin_headers = files(
    'merlin/platform/driver.h',
    'merlin/platform/api/generic.h',
    'merlin/platform/api/usart.h',
    'merlin/platform/api/i2c.h',
    'merlin/platform/api/usb.h',
    'merlin/buses/spi.h',
    'merlin/buses/i2c.h',
    'merlin/buses/usb.h',
    'merlin/buses/usart.h',
    'merlin/arch/asm-cortex-m/io.h',
    'merlin/arch/asm-rv32/io.h',
    'merlin/arch/asm-generic/io.h',
    'merlin/io.h',
    'merlin/helpers.h',
)
